Fix links for them to work on GitHub pages.

--- a/contact.html
+++ b/contact.html
@@ -14,19 +14,19 @@
     <!-- Mobile Hamburger Menu -->
     <div class="off-screen-menu">
         <ul id="nav-bar-mobile">
-            <li><a href="/menu.html">Menu</a></li>
-            <li><a href="/promo.html">Promos</a></li>
-            <li><a href="/contact.html">Contacto</a></li>
+            <li><a href="menu.html">Menu</a></li>
+            <li><a href="promo.html">Promos</a></li>
+            <li><a href="contact.html">Contacto</a></li>
         </ul>
     </div>
 
-    <div class="hidden pinned-logo"><a href="/index.html"><img class="nav-logo" src="img/logo.png" alt="Roco's Logo"></a></div>
+    <div class="hidden pinned-logo"><a href="index.html"><img class="nav-logo" src="img/logo.png" alt="Roco's Logo"></a></div>
     <!-- Desktop Navbar -->
     <nav class="desktop-nav">
         <ul id="nav-bar-desktop">
-            <li><a href="/menu.html">Menu</a></li>
-            <li><a href="/promo.html">Promos</a></li>
-            <li><a href="/contact.html">Contacto</a></li>
+            <li><a href="menu.html">Menu</a></li>
+            <li><a href="promo.html">Promos</a></li>
+            <li><a href="contact.html">Contacto</a></li>
         </ul>
     </nav>
 
@@ -99,9 +99,9 @@
 
         <div class="footer-links">
             <ul>
-                <li><a href="/menu.html">Menu</a></li>
-                <li><a href="/promo.html">Promos</a></li>
-                <li><a href="/contact.html">Contacto</a></li>
+                <li><a href="menu.html">Menu</a></li>
+                <li><a href="promo.html">Promos</a></li>
+                <li><a href="contact.html">Contacto</a></li>
             </ul>
         </div>
 
