--- a/index.html
+++ b/index.html
@@ -14,25 +14,25 @@
     <!-- Mobile Hamburger Menu -->
     <div class="off-screen-menu">
         <ul id="nav-bar-mobile">
-            <li><a href="/menu.html">Menu</a></li>
-            <li><a href="/promo.html">Promos</a></li>
-            <li><a href="/contact.html">Contacto</a></li>
+            <li><a href="menu.html">Menu</a></li>
+            <li><a href="promo.html">Promos</a></li>
+            <li><a href="contact.html">Contacto</a></li>
         </ul>
     </div>
 
-    <div class="hidden pinned-logo"><a href="/index.html"><img class="nav-logo" src="img/logo.png" alt="Roco's Logo"></a></div>
+    <div class="hidden pinned-logo"><a href="index.html"><img class="nav-logo" src="img/logo.png" alt="Roco's Logo"></a></div>
     <!-- Desktop Navbar -->
     <nav class="desktop-nav">
         <ul id="nav-bar-desktop">
-            <li><a href="/menu.html">Menu</a></li>
-            <li><a href="/promo.html">Promos</a></li>
-            <li><a href="/contact.html">Contacto</a></li>
+            <li><a href="menu.html">Menu</a></li>
+            <li><a href="promo.html">Promos</a></li>
+            <li><a href="contact.html">Contacto</a></li>
         </ul>
     </nav>
 
     <!-- Hamburger Menu Icon -->
      <div class="hamburger-container">
-        <a href="/index.html"><img class="nav-logo" src="img/logo.png" alt="Roco's Logo"></a>
+        <a href="index.html"><img class="nav-logo" src="img/logo.png" alt="Roco's Logo"></a>
         <div class="hamburger-menu">
             <span></span>
             <span></span>
@@ -101,9 +101,9 @@
 
         <div class="footer-links">
             <ul>
-                <li><a href="/menu.html">Menu</a></li>
-                <li><a href="/promo.html">Promos</a></li>
-                <li><a href="/contact.html">Contacto</a></li>
+                <li><a href="menu.html">Menu</a></li>
+                <li><a href="promo.html">Promos</a></li>
+                <li><a href="contact.html">Contacto</a></li>
             </ul>
         </div>
 
