Hotfix proper link pathing.

--- a/contact.html
+++ b/contact.html
@@ -32,7 +32,7 @@
 
     <!-- Hamburger Menu Icon -->
      <div class="hamburger-container">
-        <a href="/index.html"><img class="nav-logo" src="img/logo.png" alt="Roco's Logo"></a>
+        <a href="index.html"><img class="nav-logo" src="img/logo.png" alt="Roco's Logo"></a>
         <div class="hamburger-menu">
             <span></span>
             <span></span>
