--- a/promo.html
+++ b/promo.html
@@ -32,7 +32,7 @@
 
     <!-- Hamburger Menu Icon -->
      <div class="hamburger-container">
-        <a href="/index.html"><img class="nav-logo" src="img/logo.png" alt="Roco's Logo"></a>
+        <a href="index.html"><img class="nav-logo" src="img/logo.png" alt="Roco's Logo"></a>
         <div class="hamburger-menu">
             <span></span>
             <span></span>
@@ -84,8 +84,8 @@
                 <h2>Promos Especiales</h2>
                 <hr class="separator">
                     <p class="promo-description">Visita nuestras redes sociales: <br>
-                        <a href="https://www.facebook.com/p/Rocos-Sushi-Grill-100057082524739/"><img src="/img/facebook-black.png" alt="Facebook" class="social-logo"></a>
-                        <a href="https://www.instagram.com/rocossushi/"><img src="/img/instagram-black.png" alt="Instagram" class="social-logo"></a>
+                        <a href="https://www.facebook.com/p/Rocos-Sushi-Grill-100057082524739/"><img src="img/facebook-black.png" alt="Facebook" class="social-logo"></a>
+                        <a href="https://www.instagram.com/rocossushi/"><img src="img/instagram-black.png" alt="Instagram" class="social-logo"></a>
                     </p>
             </section>
 
