Hotfix additional incorrect paths.

--- a/menu.html
+++ b/menu.html
@@ -68,7 +68,7 @@
                 </div>
 
                 <div class="dish">
-                    <div class="promo"><a href="/promo.html">Promo!</a></div>
+                    <div class="promo"><a href="promo.html">Promo!</a></div>
                     <h4 class="dish-name">Boneless</h4>
                     <h4 class="dish-price">135</h4>
                     <p class="dish-description">Elige su sabor favorito: <br>
@@ -116,21 +116,21 @@
                 </div>
 
                 <div class="dish">
-                    <div class="promo"><a href="/promo.html">Promo!</a></div>
+                    <div class="promo"><a href="promo.html">Promo!</a></div>
                     <h4 class="dish-name">Vaquero Roll</h4>
                     <h4 class="dish-price">125</h4>
                     <p class="dish-description">Este delicioso sushi contiene Pollo, Res y Tocino.</p>
                 </div>
 
                 <div class="dish">
-                    <div class="promo"><a href="/promo.html">Promo!</a></div>
+                    <div class="promo"><a href="promo.html">Promo!</a></div>
                     <h4 class="dish-name">Mar y Tierra</h4>
                     <h4 class="dish-price">125</h4>
                     <p class="dish-description">Este delicioso sushi contiene Camarón y Res.</p>
                 </div>
 
                 <div class="dish">
-                    <div class="promo"><a href="/promo.html">Promo!</a></div>
+                    <div class="promo"><a href="promo.html">Promo!</a></div>
                     <h4 class="dish-name">Cordon Blue</h4>
                     <h4 class="dish-price">125</h4>
                     <p class="dish-description">Este delicioso sushi contiene Pollo, Tocino y Queso Gratinado.</p>
